# NanoGUI-Chess

./: .gitmodules  LICENSE  README.md
Mathias/: Logbog.md
Niklas/Logbog/: Fredag-13-09.md  Fredag-30-08.md  Fredag-6-09.md
build-Chess-Desktop-Debug/: .qmake.stash  Makefile
build-Chess-Desktop-Debug/Chess.app/Contents/: Info.plist
build-Chess-Desktop-Debug/Chess.app/Contents/MacOS/: Chess
src/: CMakeLists.txt  Chess.pro  chess.cbp  chess_GUI.cpp  chess_GUI.h  chess_board.cpp  chess_piece.cpp  chess_piece.h  chess_pieces.cpp  chess_pieces.h  computer.cpp  computer.h  main.cpp  movegenerator.cpp  movegenerator.h  multiplayerclient.cpp  multiplayerclient.h  multiplayerserver.cpp  multiplayerserver.h  server.cpp
src/Chess_Pieces/: chess_pieces.cpp  chess_pieces.h
src/include/FL/: Enumerations.H  Fl.H  Fl_Adjuster.H  Fl_BMP_Image.H  Fl_Bitmap.H  Fl_Box.H  Fl_Browser.H  Fl_Browser_.H  Fl_Button.H  Fl_Cairo.H  Fl_Cairo_Window.H  Fl_Chart.H  Fl_Check_Browser.H  Fl_Check_Button.H  Fl_Choice.H  Fl_Clock.H  Fl_Color_Chooser.H  Fl_Copy_Surface.H  Fl_Counter.H  Fl_Device.H  Fl_Dial.H  Fl_Double_Window.H  Fl_Export.H  Fl_File_Browser.H  Fl_File_Chooser.H  Fl_File_Icon.H  Fl_File_Input.H  Fl_Fill_Dial.H  Fl_Fill_Slider.H  Fl_Float_Input.H  Fl_FormsBitmap.H  Fl_FormsPixmap.H  Fl_Free.H  Fl_GIF_Image.H  Fl_Gl_Window.H  Fl_Group.H  Fl_Help_Dialog.H  Fl_Help_View.H  Fl_Hold_Browser.H  Fl_Hor_Fill_Slider.H  (+103 more)
src/include/FL/images/: jconfig.h  pnglibconf.h  zconf.h
src/macos/lib/: libfltk.1.3.dylib  libfltk_forms.1.3.dylib  libfltk_gl.1.3.dylib  libfltk_images.1.3.dylib
